# getmecamtool

./: .gitignore  AUTHORS  CMakeLists.txt  LICENSE  README  testfile
include/: camtool.h
misc/: diff_user.html  live.htm.my  scanner.go  user.htm.my  webui.patch
misc/proxy/: newproxy.c  proxy  proxy.c
scripts/: getmecamtool  x
scripts/commands/: 0common.sh  get_settings.sh  get_users.sh  host_file.sh  inject_exec.sh  inject_proxy.sh  inject_users.sh  new_settings.sh  poison_webui.sh  random_cmd.sh
src/: CMakeLists.txt  assemble.c  assemble.h  common.c  common.h  confextract.c  confpack.c  disassemble.c  disassemble.h  dnsmod.c  sysextract.c  syspack.c  uiextract.c  uipack.c
